--- a/Banking/04 - بن کارت.md
+++ b/Banking/04 - بن کارت.md
@@ -1,3 +1,11 @@
+- [بن کارت](#%D8%A8%D9%86-%DA%A9%D8%A7%D8%B1%D8%AA)
+- [بن شارژ اعتبار](#%D8%A8%D9%86-%D8%B4%D8%A7%D8%B1%DA%98-%D8%A7%D8%B9%D8%AA%D8%A8%D8%A7%D8%B1)
+- [بن تخفیف مبلغی](#%D8%A8%D9%86-%D8%AA%D8%AE%D9%81%DB%8C%D9%81-%D9%85%D8%A8%D9%84%D8%BA%DB%8C)
+- [بن تخفیف درصدی](#%D8%A8%D9%86-%D8%AA%D8%AE%D9%81%DB%8C%D9%81-%D8%AF%D8%B1%D8%B5%D8%AF%DB%8C)
+- [اعمال ووچر به فاکتور](#%D8%A7%D8%B9%D9%85%D8%A7%D9%84-%D9%88%D9%88%DA%86%D8%B1-%D8%A8%D9%87-%D9%81%D8%A7%DA%A9%D8%AA%D9%88%D8%B1)
+- [دریافت و جستجو لیست بن ها](#%D8%AF%D8%B1%DB%8C%D8%A7%D9%81%D8%AA-%D9%88-%D8%AC%D8%B3%D8%AA%D8%AC%D9%88-%D9%84%DB%8C%D8%B3%D8%AA-%D8%A8%D9%86-%D9%87%D8%A7)
+- [فعالسازی و غیرفعالسازی بن تخفیف](#%D9%81%D8%B9%D8%A7%D9%84%D8%B3%D8%A7%D8%B2%DB%8C-%D9%88-%D8%BA%DB%8C%D8%B1%D9%81%D8%B9%D8%A7%D9%84%D8%B3%D8%A7%D8%B2%DB%8C-%D8%A8%D9%86-%D8%AA%D8%AE%D9%81%DB%8C%D9%81)
+
 ## بن کارت
 اگر سازمانی هستید که قصد ایجاد بن‌کارت‌ الکترونیکی برای کارکنان خود را دارید، می‌توانید از این سرویس استفاده کنید و آن را با مبلغ مورد نظرتان شارژ نمایید. 
 
