--- a/Banking/عملیات کارت بانکی - 06.md
+++ b/Banking/عملیات کارت بانکی - 06.md
@@ -1,3 +1,7 @@
+- [عملیات کارت بانکی](#%D8%B9%D9%85%D9%84%DB%8C%D8%A7%D8%AA-%DA%A9%D8%A7%D8%B1%D8%AA-%D8%A8%D8%A7%D9%86%DA%A9%DB%8C)
+- [بازیابی اطلاعات سپرده از کارت](#%D8%A8%D8%A7%D8%B2%DB%8C%D8%A7%D8%A8%DB%8C-%D8%A7%D8%B7%D9%84%D8%A7%D8%B9%D8%A7%D8%AA-%D8%B3%D9%BE%D8%B1%D8%AF%D9%87-%D8%A7%D8%B2-%DA%A9%D8%A7%D8%B1%D8%AA)
+- [بازیابی اطلاعات شبا از کارت](#%D8%A8%D8%A7%D8%B2%DB%8C%D8%A7%D8%A8%DB%8C-%D8%A7%D8%B7%D9%84%D8%A7%D8%B9%D8%A7%D8%AA-%D8%B4%D8%A8%D8%A7-%D8%A7%D8%B2-%DA%A9%D8%A7%D8%B1%D8%AA)
+- [دریافت اطلاعات کارت های شتابی و غیر شتابی](#%D8%AF%D8%B1%DB%8C%D8%A7%D9%81%D8%AA-%D8%A7%D8%B7%D9%84%D8%A7%D8%B9%D8%A7%D8%AA-%DA%A9%D8%A7%D8%B1%D8%AA-%D9%87%D8%A7%DB%8C-%D8%B4%D8%AA%D8%A7%D8%A8%DB%8C-%D9%88-%D8%BA%DB%8C%D8%B1-%D8%B4%D8%AA%D8%A7%D8%A8%DB%8C)
 
 ## عملیات کارت بانکی
 
