--- a/Banking/احراز هویت/00 - احراز هویت.md
+++ b/Banking/احراز هویت/00 - احراز هویت.md
@@ -1,15 +1,20 @@
-- [احراز هویت](#%D8%A7%D8%AD%D8%B1%D8%A7%D8%B2-%D9%87%D9%88%DB%8C%D8%AA)
-- [SSO](#SSO)
-- [ابطال توکن](#%D8%A7%D8%A8%D8%B7%D8%A7%D9%84-%D8%AA%D9%88%DA%A9%D9%86)
-- [دریافت اطلاعات توکن](#%D8%AF%D8%B1%DB%8C%D8%A7%D9%81%D8%AA-%D8%A7%D8%B7%D9%84%D8%A7%D8%B9%D8%A7%D8%AA-%D8%AA%D9%88%DA%A9%D9%86)
-- [OTP](#OTP)
-- [ورود با OTP با سرور](#%D9%88%D8%B1%D9%88%D8%AF-%D8%A8%D8%A7-OTP-%D8%A8%D8%A7-%D8%B3%D8%B1%D9%88%D8%B1)
-- [فراخوانی سرویس Handshake سمت SSO](#%D9%81%D8%B1%D8%A7%D8%AE%D9%88%D8%A7%D9%86%DB%8C-%D8%B3%D8%B1%D9%88%DB%8C%D8%B3-Handshake-%D8%B3%D9%85%D8%AA-SSO)
-- [درخواست دریافت کد OTP](#%D8%AF%D8%B1%D8%AE%D9%88%D8%A7%D8%B3%D8%AA-%D8%AF%D8%B1%DB%8C%D8%A7%D9%81%D8%AA-%DA%A9%D8%AF-OTP)
-- [تایید کد OTP](#%D8%AA%D8%A7%DB%8C%DB%8C%D8%AF-%DA%A9%D8%AF-OTP)
-- [دریافت توکن از سرور SSO](#%D8%AF%D8%B1%DB%8C%D8%A7%D9%81%D8%AA-%D8%AA%D9%88%DA%A9%D9%86-%D8%A7%D8%B2-%D8%B3%D8%B1%D9%88%D8%B1-SSO)
+
+- [احراز هویت](#احراز-هویت) 
+- [SSO](#sso)    
+- [نصب پکیج pod-sso-service](#نصب-پکیج-pod-sso-service)    
+- [دریافت توکن دسترسی کاربر](#دریافت-توکن-دسترسی-کاربر)   
+- [بروزرسانی توکن دسترسی کاربر](#بروزرسانی-توکن-دسترسی-کاربر)   
+- [ابطال توکن](#ابطال-توکن)    
+- [دریافت اطلاعات توکن](#دریافت-اطلاعات-توکن)
+- [OTP](#otp)    
+- [ورود با OTP با سرور](#ورود-با-otp-با-سرور)    
+- [فراخوانی سرویس Handshake سمت SSO](#فراخوانی-سرویس-handshake-سمت-sso)    
+- [درخواست دریافت کد OTP](#درخواست-دریافت-کد-otp)    
+- [تایید کد OTP](#تایید-کد-otp)    
+- [دریافت توکن از سرور SSO](#دریافت-توکن-از-سرور-sso)
 
 ## احراز هویت
+
 ## SSO
 
 ### نصب پکیج pod-sso-service
@@ -76,7 +81,9 @@
         #  instantiates a SSOService
         $SSOService = new SSOService($clientInfo);
 
-```<div class="box-end">
+```
+
+<div class="box-end">
 </div>
 
 ### دریافت توکن دسترسی کاربر
@@ -97,7 +104,9 @@
             print_r($e->getResult());
         }
 
-```<div class="box-end">
+```
+
+<div class="box-end">
 </div>
 
 ### بروزرسانی توکن دسترسی کاربر
