--- a/Banking/احراز هویت/00 - احراز هویت.md
+++ b/Banking/احراز هویت/00 - احراز هویت.md
@@ -1,21 +1,18 @@
 
-- [احراز هویت](#احراز-هویت) 
-- [SSO](#sso)    
+- [احراز هویت](#احراز-هویت)    
 - [نصب پکیج pod-sso-service](#نصب-پکیج-pod-sso-service)    
 - [دریافت توکن دسترسی کاربر](#دریافت-توکن-دسترسی-کاربر)   
 - [بروزرسانی توکن دسترسی کاربر](#بروزرسانی-توکن-دسترسی-کاربر)   
 - [ابطال توکن](#ابطال-توکن)    
-- [دریافت اطلاعات توکن](#دریافت-اطلاعات-توکن)
-- [OTP](#otp)    
+- [دریافت اطلاعات توکن](#دریافت-اطلاعات-توکن)  
 - [ورود با OTP با سرور](#ورود-با-otp-با-سرور)    
 - [فراخوانی سرویس Handshake سمت SSO](#فراخوانی-سرویس-handshake-سمت-sso)    
 - [درخواست دریافت کد OTP](#درخواست-دریافت-کد-otp)    
 - [تایید کد OTP](#تایید-کد-otp)    
 - [دریافت توکن از سرور SSO](#دریافت-توکن-از-سرور-sso)
 
-## SSO
 
-### نصب پکیج pod-sso-service
+## نصب پکیج pod-sso-service
 پکیج ارائه شده برای  سامانه ورود یکپارچه، pod-sso-service، از طریق دستور زیر قابل نصب می باشد.
 
 ```
@@ -79,6 +76,9 @@
 
 ```
 
+<div class="box-end">
+</div>
+
 ## دریافت توکن دسترسی کاربر
 پس از دریافت کد برای دریافت توکن دسترسی کاربربا استفاده از نمونه کد زیر و با پر کردن پارامترهای ورودی می توانید توکن دسترسی کاربر را دریافت نمایید.
 
@@ -99,7 +99,10 @@
 
 ```
 
-### بروزرسانی توکن دسترسی کاربر
+<div class="box-end">
+</div>
+
+## بروزرسانی توکن دسترسی کاربر
 پس از گذشت زمان expires_in ، توکن دسترسی کاربر منقضی می شود. با استفاده از refresh_token و تابع زیر، توکن معتبر جدید درخواست دهید.
 
 ```php
@@ -118,7 +121,10 @@
         }
 ```
 
-### ابطال توکن
+<div class="box-end">
+</div>
+
+## ابطال توکن
 ممکن است به هر دلیلی بخواهید دسترسی برنامه به اطلاعات حساب کاربر را از بین ببرید. برای این کار می توانید از ابطال توکن استفاده کنید.
 
 ```php
@@ -139,7 +145,10 @@
         }
 ```
 
-### دریافت اطلاعات توکن 
+<div class="box-end">
+</div>
+
+## دریافت اطلاعات توکن 
 برای این که از صحت و اعتبار توکن کاربر خود مطلع شوید می توانید اطلاعات توکن مورد نظر را دریافت کنید.
 
 ```php
@@ -163,16 +172,17 @@
 <div class="box-end">
 </div>
 
-## OTP
-
-### ورود با OTP با سرور
+## ورود با OTP با سرور
 جهت ایجاد امکان ورود با رمز یکبار مصرف (OTP) برای کاربران، در حالتی که کسب و کار دارای سرور امن و قابلیت ایجاد ارتباط با SSO پاد از طریق سرور خود باشد، این روش پیشنهاد می گردد.
 
 لازم است از طریق سرور، به ازای هر شماره موبایل یا دستگاهی که میخواهد لاگین شود، اطلاعات دستگاه را با متد handshake به SSO معرفی نمایید و keyId دریافت کنید.
 
 http://docs.pod.land/v1.0.8.0/Developer/User/1861/otpwithserver
 
-### فراخوانی سرویس Handshake سمت SSO
+<div class="box-end">
+</div>
+
+## فراخوانی سرویس Handshake سمت SSO
 سرویس handshake به منظور معرفی دستگاه و هم‌چنین تفاهم بر روی پارامترهای امضای دیجیتال(شامل algorithm،keyId) فراخوانی می‌شود.برای فراخوانی این سرویس علاوه بر api_token و client_id که از پنل مدیریت کسب و کار قابل دریافت است، لازم است کلید عمومی کسب و کار به سیستم معرفی شده باشد.
 
 ```php
@@ -200,7 +210,10 @@ http://docs.pod.land/v1.0.8.0/Developer/User/1861/otpwithserver
     }
 ```
 
-### درخواست دریافت کد OTP
+<div class="box-end">
+</div>
+
+## درخواست دریافت کد OTP
  پس از دریافت  key_id  از مرحله قبل و با استفاده از کلید خصوصی (private_key)  از متد زیر برای ساخت امضای دیجیتال و ارسال آن و همچنین دریافت کد OTP اقدام کنید. کد مورد نظر بر اساس مقدار فیلد identity  که می فرستید به کاربر مورد نظر از طریق پیامک یا ایمیل فرستاده می شود.
 
 ```php
@@ -237,7 +250,10 @@ http://docs.pod.land/v1.0.8.0/Developer/User/1861/otpwithserver
         }
 ```
 
-### تایید کد OTP
+<div class="box-end">
+</div>
+
+## تایید کد OTP
 پس از دریافت otp  کاربر باید آن را ارسال کند. از طریق کد زیر و با استفاده امضای دیجیتالی که در متد signatureAuthorize دریافت می کنید  برای تایید کد otp ارسالی از کاربر استفاده کنید :
 
 ```php
@@ -260,7 +276,10 @@ http://docs.pod.land/v1.0.8.0/Developer/User/1861/otpwithserver
         }
 ```
 
-### دریافت توکن از سرور SSO
+<div class="box-end">
+</div>
+
+## دریافت توکن از سرور SSO
 با استفاده از کد دریافتی از متد verifyOTP و ارسال آن از طریق متد getAccessTokenByOTP توکن دسترسی را از سرور SSO دریافت کنید: 
 
 
